@@ -58,6 +58,24 @@ literal|"unset.sys.property"
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|testNRTModeProperty
+specifier|public
+name|void
+name|testNRTModeProperty
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|assertConfigs
+argument_list|(
+literal|"bad-solrconfig-nrtmode.xml"
+argument_list|,
+literal|"schema.xml"
+argument_list|,
+literal|"nrtMode"
+argument_list|)
+expr_stmt|;
+block|}
 DECL|method|testMultipleDirectoryFactories
 specifier|public
 name|void
